--- a/src/styles.css
+++ b/src/styles.css
@@ -83,7 +83,19 @@
 }
 
 * {
-  font-size: 18px;
+  font-size: 24px;
+}
+
+@media (max-width: 1920px) {
+  * {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1440px) {
+  * {
+    font-size: 18px;
+  }
 }
 
 @media (max-width: 768px) {
